<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dnt_dialog_width"
    android:layout_height="@dimen/dnt_dialog_height"
    android:background="@drawable/bkg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/dnt_padding" >

    <TextView
        android:id="@+id/tv_confirm_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dnt_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_confirm_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dnt_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_option"
            android:text="@string/dnt_yes"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_confirm_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dnt_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_option"
            android:text="@string/dnt_no"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>