<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="190dp"
    android:background="@drawable/bkg_login"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dnt_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dnt_margin"
            android:background="@drawable/bkg_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/dnt_username"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dnt_margin"
            android:background="@drawable/bkg_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/dnt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_login"
                android:layout_width="@dimen/dnt_login_width"
                android:layout_height="@dimen/dnt_login_height"
                android:layout_margin="@dimen/dnt_margin"
                android:background="@drawable/btn_login"
                android:paddingEnd="0dp"
                android:paddingLeft="@dimen/dnt_login_height"
                android:paddingRight="0dp"
                android:paddingStart="@dimen/dnt_login_height"
                android:text="@string/dnt_login"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/bt_facebook"
                android:layout_width="@dimen/dnt_login_width"
                android:layout_height="@dimen/dnt_login_height"
                android:layout_margin="@dimen/dnt_margin"
                android:background="@drawable/btn_facebook"
                android:paddingEnd="0dp"
                android:paddingLeft="@dimen/dnt_login_height"
                android:paddingRight="0dp"
                android:paddingStart="@dimen/dnt_login_height"
                android:text="@string/dnt_facebook"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_close"
        android:layout_width="@dimen/dnt_close_size"
        android:layout_height="@dimen/dnt_close_size"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dnt_close_margin"
        android:background="@drawable/btn_close" />

</FrameLayout>