<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_main"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_help_logo"
        android:layout_width="@dimen/dnt_logo_size"
        android:layout_height="@dimen/dnt_logo_size"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:contentDescription="@drawable/img_logo_en"
        android:src="@drawable/img_logo_en" />

    <ImageView
        android:id="@+id/iv_help_title"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@drawable/img_help_en"
        android:src="@drawable/img_help_en" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dnt_margin"
        android:layout_marginEnd="@dimen/dnt_margin"
        android:layout_marginLeft="@dimen/dnt_margin"
        android:layout_marginRight="@dimen/dnt_margin"
        android:layout_marginStart="@dimen/dnt_margin" >

        <LinearLayout
            android:id="@+id/ll_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_option"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_help_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmv_help_0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dnt_help_top"
                android:layout_marginLeft="@dimen/dnt_help_left"
                android:layout_marginStart="@dimen/dnt_help_left"
                android:layout_marginTop="@dimen/dnt_help_top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_help_1"
                    android:layout_width="@dimen/dnt_help_size"
                    android:layout_height="@dimen/dnt_help_size"
                    android:contentDescription="@drawable/btn_quit_0"
                    android:src="@drawable/btn_quit_0" />

                <TextView
                    android:id="@+id/tv_help_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dnt_margin"
                    android:layout_marginStart="@dimen/dnt_margin"
                    android:text="@string/bmv_help_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dnt_help_top"
                android:layout_marginLeft="@dimen/dnt_help_left"
                android:layout_marginStart="@dimen/dnt_help_left"
                android:layout_marginTop="@dimen/dnt_help_top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_help_2"
                    android:layout_width="@dimen/dnt_help_size"
                    android:layout_height="@dimen/dnt_help_size"
                    android:contentDescription="@drawable/btn_fifty_0"
                    android:src="@drawable/btn_fifty_0" />

                <TextView
                    android:id="@+id/tv_help_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dnt_margin"
                    android:layout_marginStart="@dimen/dnt_margin"
                    android:text="@string/bmv_help_2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dnt_help_top"
                android:layout_marginLeft="@dimen/dnt_help_left"
                android:layout_marginStart="@dimen/dnt_help_left"
                android:layout_marginTop="@dimen/dnt_help_top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_help_3"
                    android:layout_width="@dimen/dnt_help_size"
                    android:layout_height="@dimen/dnt_help_size"
                    android:contentDescription="@drawable/btn_buddy_0"
                    android:src="@drawable/btn_buddy_0" />

                <TextView
                    android:id="@+id/tv_help_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dnt_margin"
                    android:layout_marginStart="@dimen/dnt_margin"
                    android:text="@string/bmv_help_3"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dnt_help_top"
                android:layout_marginLeft="@dimen/dnt_help_left"
                android:layout_marginStart="@dimen/dnt_help_left"
                android:layout_marginTop="@dimen/dnt_help_top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_help_4"
                    android:layout_width="@dimen/dnt_help_size"
                    android:layout_height="@dimen/dnt_help_size"
                    android:contentDescription="@drawable/btn_audience_0"
                    android:src="@drawable/btn_audience_0" />

                <TextView
                    android:id="@+id/tv_help_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dnt_margin"
                    android:layout_marginStart="@dimen/dnt_margin"
                    android:text="@string/bmv_help_4"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dnt_help_top"
                android:layout_marginLeft="@dimen/dnt_help_left"
                android:layout_marginStart="@dimen/dnt_help_left"
                android:layout_marginTop="@dimen/dnt_help_top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_help_5"
                    android:layout_width="@dimen/dnt_help_size"
                    android:layout_height="@dimen/dnt_help_size"
                    android:contentDescription="@drawable/btn_advisor_0"
                    android:src="@drawable/btn_advisor_0" />

                <TextView
                    android:id="@+id/tv_help_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dnt_margin"
                    android:layout_marginStart="@dimen/dnt_margin"
                    android:text="@string/bmv_help_5"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_help_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bmv_help_6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_help_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bmv_help_7"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <WebView
            android:id="@+id/wv_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>